--- a/Laboratorna1.html
+++ b/Laboratorna1.html
@@ -10,7 +10,7 @@
     <hr>
     <p>For <a href="https://www.w3.org/">this link</a> you can found interesting information about <b>markup language HTML.5</b> and <b>language of styles CSS3</b></p>
     <p>I saw this picture on the Internet and I want to share it with you</p>
-    <p align="center">
+    <p style="text-align:center;">
          <a href="https://miro.medium.com/max/792/1*lJ32Bl-lHWmNMUSiSq17gQ.png">
     <img src="1_lJ32Bl-lHWmNMUSiSq17gQ.png " widht="100" height="360">
 </a>
