--- a/Laboratorna5.html
+++ b/Laboratorna5.html
@@ -38,7 +38,7 @@
                     </p>
                     <p>
                         <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-                        <span class="text">gadot@gmail.com</span>
+                        <span class="text">angelina@gmail.com</span>
                     </p>
                     <p>
                         <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
